--- a/css/Styles.css
+++ b/css/Styles.css
@@ -62,14 +62,12 @@ h2 {
 }
 
 .orange {
-  color: var(--orange)
+  color: var(--orange);
 }
 
 .pink {
-  color: var(--pink)
+  color: var(--pink);
 }
-
-
 
 /* --------------------------------------------------------------------------------------------------------- */
 /* #header STYES */
@@ -93,7 +91,6 @@ h2 {
     & a:hover {
       color: var(--orange) !important;
     }
-
   }
 
   & .home-hero {
@@ -109,20 +106,21 @@ h2 {
     margin: 0 auto;
     text-align: center;
 
-
     & h2 {
-      font-weight: 300
+      font-weight: 300;
     }
 
     & #name {
       padding: 15px 0;
-      background: linear-gradient(90deg,
-          #ef7322 9.98%,
-          #d714f5 25.54%,
-          #ea604c 40.97%,
-          #d714f5 55.18%,
-          #f27d0b 72.75%,
-          #d714f5 84.42%);
+      background: linear-gradient(
+        90deg,
+        #ef7322 9.98%,
+        #d714f5 25.54%,
+        #ea604c 40.97%,
+        #d714f5 55.18%,
+        #f27d0b 72.75%,
+        #d714f5 84.42%
+      );
       background-clip: text;
       font-size: 7rem;
       font-weight: 600;
@@ -153,18 +151,25 @@ h2 {
       border: none;
       text-decoration: none;
       border-radius: var(--border-radius);
-      background: linear-gradient(270deg, #310E36 0.09%, rgba(242, 125, 11, 0.49) 99.87%);
+      background: linear-gradient(
+        270deg,
+        #310e36 0.09%,
+        rgba(242, 125, 11, 0.49) 99.87%
+      );
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       transition: all 0.5s ease;
     }
 
-    & a:hover{
-      transform: scale(.9);
+    & a:hover {
+      transform: scale(0.9);
       cursor: pointer;
       box-shadow: 0 0 0 6px var(--background-opacity);
-      background: linear-gradient(270deg, #310E36 0.09%, rgba(242, 125, 11, 0.6) 99.87%);
+      background: linear-gradient(
+        270deg,
+        #310e36 0.09%,
+        rgba(242, 125, 11, 0.6) 99.87%
+      );
     }
-
   }
 }
 
@@ -178,58 +183,42 @@ h2 {
   z-index: -10;
   left: -300px;
   top: -60px;
+  animation: rotate infinite 50s ease-in-out;
+  border-radius: inherit;
 }
 
-
-/* --------------------------------------------------------------------------------------------------------- */
-/* Know me section */
-/* --------------------------------------------------------------------------------------------------------- */
-
-#know-me {
-  padding: rem;
-  color: var(--text-color);
-  position: relative;
-
-  & .know-me-area {
-    padding: 2rem;
+@keyframes rotate {
+  0% {
+    transform: scale(1.3) translate(0) rotate(0deg) perspective(10px);
+    border-radius: 150% 60% 80% 100%;
   }
 
-  & h2 {
-    margin-bottom: 1.8rem;
-    color: var(--pink);
-
-    & span {
-      color: var(--orange);
-    }
+  20% {
+    transform: scale(1.15) translate(30%, 50px) rotate(60deg)
+      perspective(1000px);
+    border-radius: 73% 100% 82% 51%;
   }
 
-  & p {
-    font-size: var(--p-size);
-    font-weight: var(--p-weight);
-    width: 80%;
-    word-wrap: break-word;
+  40% {
+    transform: scale(1) translate(60%, -200px) rotate(90deg);
+    border-radius: 50% 60% 80% 51%;
   }
 
-  & .know-me-avatar {
-    position: relative;
-    z-index: 100;
+  60% {
+    transform: scale(0.8) translate(90%, -150px) rotate(150deg);
+    border-radius: 100% 55% 90% 61%;
   }
 
+  80% {
+    transform: scale(1) translate(60%, -100px) rotate(200deg);
+    border-radius: 50% 60% 80% 51%;
+  }
+
+  100% {
+    transform: scale(1.5) translate(0) rotate(0deg);
+    border-radius: 50% 60% 80% 51%;
+  }
 }
-
-#know-me::before {
-  content: "";
-  height: 1000px;
-  width: 1000px;
-  background: url(../img/back-blur.png);
-  background-size: cover;
-  transform: rotate(50deg);
-  position: absolute;
-  z-index: -10;
-  right: -215px;
-  top: 0;
-}
-
 
 .navbar-brand svg path {
   fill: var(--text-color);
@@ -247,48 +236,143 @@ h2 {
 /* todo technologies section  */
 #technologies {
   /* nesting */
-
+  padding-bottom: 5rem;
   & h2 {
     color: var(--pink);
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 5rem;
+    background: linear-gradient(
+      -200deg,
+      #ef7322 9.98%,
+      #d714f5 25.54%,
+      #ea604c 40.97%,
+      #d714f5 55.18%,
+      #f27d0b 72.75%,
+      #d714f5 84.42%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
+}
 
-  & .my-row {
-    display: grid;
-    grid-template-columns: repeat(5, minmax(100px, 1fr));
-    gap: 2vw 5vw;
+& .my-row {
+  display: grid;
+  grid-template-columns: repeat(5, minmax(100px, 1fr));
+  gap: 2vw 5vw;
+  place-items: center;
+
+  & .card-tech-container {
+    display: flex;
     place-items: center;
 
+    & .tech-card {
+      background: var(--background-opacity);
+      border-radius: var(--border-radius);
+      padding: 1rem;
+      text-align: center;
+      color: var(--text-color);
+      margin: 0 auto;
 
-    & .card-tech-container {
-
-      display: flex;
-      place-items: center;
-
-
-      & .tech-card {
-        background: var(--background-opacity);
-        border-radius: var(--border-radius);
-        padding: 1rem;
-        text-align: center;
-        color: var(--text-color);
-        margin: 0 auto;
-
-
-
-        & img {
-          display: block;
-          margin: 0 auto 1rem auto;
-        }
-
+      & img {
+        display: block;
+        margin: 0 auto 1rem auto;
       }
-
     }
+  }
+}
 
+/* --------------------------------------------------------------------------------------------------------- */
+/* Know me section */
+/* --------------------------------------------------------------------------------------------------------- */
+
+#know-me {
+  padding: 2rem;
+  color: var(--text-color);
+  position: relative;
+
+  & .know-me-area {
+    padding: 2rem;
   }
 
+  & h2 {
+    margin-bottom: 1.8rem;
+    color: var(--pink);
+    background: linear-gradient(
+      90deg,
+      #ef7322 9.98%,
+      #d714f5 25.54%,
+      #ea604c 40.97%,
+      #d714f5 55.18%,
+      #f27d0b 72.75%,
+      #d714f5 84.42%
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
+  & span {
+    color: var(--orange);
+  }
+}
+
+& p {
+  font-size: var(--p-size);
+  font-weight: var(--p-weight);
+  width: 80%;
+  word-wrap: break-word;
+}
+
+& .know-me-avatar {
+  position: relative;
+  z-index: 100;
+}
+
+#know-me::before {
+  content: "";
+  height: 1000px;
+  width: 1000px;
+  background: url(../img/back-blur.png);
+  background-size: cover;
+  transform: rotate(50deg);
+  position: absolute;
+  z-index: -10;
+  right: -215px;
+  top: 0;
+  animation: rotate-reverse infinite 50s ease-in-out;
+}
+
+@keyframes rotate-reverse {
+  0% {
+    transform: scale(1.3) translate(0) rotate(0deg);
+    border-radius: 150% 60% 80% 100%;
+  }
+
+  20% {
+    transform: scale(1.15) translate(-30%, 50px) rotate(60deg);
+    border-radius: 73% 100% 82% 51%;
+  }
+
+  40% {
+    transform: scale(1) translate(-60%, -200px) rotate(90deg);
+    border-radius: 50% 60% 80% 51%;
+  }
+
+  60% {
+    transform: scale(0.8) translate(-90%, -150px) rotate(150deg);
+    border-radius: 100% 55% 90% 61%;
+  }
+
+  80% {
+    transform: scale(1) translate(-60%, -100px) rotate(200deg);
+    border-radius: 50% 60% 80% 51%;
+  }
+
+  100% {
+    transform: scale(1.5) translate(0) rotate(0deg);
+    border-radius: 50% 60% 80% 51%;
+  }
 }
 
 /* --------------------------------------------------------------------------------------------------------- */
@@ -296,7 +380,6 @@ h2 {
 /* --------------------------------------------------------------------------------------------------------- */
 
 #projects {
-
   padding: 5rem;
 
   & .card-project {
@@ -304,13 +387,15 @@ h2 {
     padding: 0.4rem;
     text-align: left;
     border-radius: var(--border-radius);
-    background: linear-gradient(203deg,
-        #d714f5 15.19%,
-        #f27d0b 30.3%,
-        #d714f5 44.48%,
-        #f27d0b 58.56%,
-        #d714f5 73.77%,
-        #f27d0b 90.83%);
+    background: linear-gradient(
+      203deg,
+      #d714f5 15.19%,
+      #f27d0b 30.3%,
+      #d714f5 44.48%,
+      #f27d0b 58.56%,
+      #d714f5 73.77%,
+      #f27d0b 90.83%
+    );
     border-radius: var(--border-radius);
     border-radius: var(--border-radius);
 
@@ -333,13 +418,15 @@ h2 {
         margin-bottom: 3rem;
 
         & span {
-          background: linear-gradient(90deg,
-              #ef7322 9.98%,
-              #d714f5 25.54%,
-              #ea604c 40.97%,
-              #d714f5 55.18%,
-              #f27d0b 72.75%,
-              #d714f5 84.42%);
+          background: linear-gradient(
+            90deg,
+            #ef7322 9.98%,
+            #d714f5 25.54%,
+            #ea604c 40.97%,
+            #d714f5 55.18%,
+            #f27d0b 72.75%,
+            #d714f5 84.42%
+          );
           background-clip: text;
           -webkit-background-clip: text;
           /* aplicamos los estilos para el clip en el text */
@@ -352,13 +439,10 @@ h2 {
         word-wrap: break-word;
         opacity: 0.7;
       }
-
     }
-
   }
 
   & #cards {
-
     & .project-list {
       display: flex;
       overflow-x: scroll;
@@ -374,7 +458,7 @@ h2 {
         box-shadow: -1rem 0 3rem #00000086;
         display: flex;
         flex-direction: column;
-        transition: .2s;
+        transition: 0.2s;
         margin: 0;
         scroll-snap-align: start;
         clear: both;
@@ -393,22 +477,20 @@ h2 {
           border-radius: 0.7rem;
           text-decoration: none;
           font-weight: 700;
-          transition: .5s;
+          transition: 0.5s;
           text-transform: uppercase;
         }
 
         & a:hover {
           background: var(--pink);
         }
-
-
       }
 
-      & .my-project-card:focus-within~.my-project-card {
+      & .my-project-card:focus-within ~ .my-project-card {
         transform: translateX(130px);
       }
 
-      & .my-project-card:hover~.my-project-card {
+      & .my-project-card:hover ~ .my-project-card {
         transform: translateX(130px);
       }
 
@@ -419,8 +501,6 @@ h2 {
       & .my-project-card:not(:first-child) {
         margin-left: -120px;
       }
-
-
     }
 
     & .project-list::-webkit-scrollbar {
@@ -447,31 +527,22 @@ h2 {
     }
 
     & .project-list::-webkit-scrollbar-thumb {
-      background: linear-gradient(90deg,
-          #ea604c80 40.97%,
-          #d714f580 84.42%);
-      border-radius: .7rem;
+      background: linear-gradient(90deg, #ea604c80 40.97%, #d714f580 84.42%);
+      border-radius: 0.7rem;
     }
 
     & .project-list::-webkit-scrollbar-track {
       background: #ffffff30;
-      border-radius: .7rem;
+      border-radius: 0.7rem;
     }
-
-
-
   }
-
-
 }
-
 
 /* --------------------------------------------------------------------------------------------------------- */
 /* CONTACT SECTION */
 /* --------------------------------------------------------------------------------------------------------- */
 
 #contact {
-
   color: var(--text-color);
   position: relative;
 
@@ -483,9 +554,16 @@ h2 {
       font-weight: 300;
       margin-bottom: 2rem;
 
+
+
       & span {
         font-weight: 650;
         color: var(--pink);
+        background: linear-gradient( -90deg, #ef7322 9.98%, #d714f5 25.54%, #ea604c 40.97%, #d714f5 55.18%, #f27d0b 72.75%, #d714f5 84.42% );
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
       }
     }
 
@@ -496,7 +574,6 @@ h2 {
   }
 
   & article.right {
-
     /* cards */
     & .social-net {
       display: flex;
@@ -524,7 +601,11 @@ h2 {
         width: 100%;
         border-radius: 0 1.3rem 1.3rem 0;
         padding: 1.5rem;
-        background: linear-gradient(270deg, rgba(215, 20, 245, 0.17) 0.04%, rgba(231, 111, 0, 0.17) 99.15%);
+        background: linear-gradient(
+          270deg,
+          rgba(215, 20, 245, 0.17) 0.04%,
+          rgba(231, 111, 0, 0.17) 99.15%
+        );
 
         & a {
           color: var(--text-color);
@@ -535,13 +616,9 @@ h2 {
           }
         }
       }
-
     }
-
   }
-
 }
-
 
 #contact::before {
   content: "";
@@ -553,6 +630,8 @@ h2 {
   z-index: -10;
   left: -215px;
   top: 0;
+  animation: rotate infinite 50s ease-in-out;
+  border-radius: inherit;
 }
 
 /* --------------------------------------------------------------------------------------------------------- */
@@ -560,7 +639,7 @@ h2 {
 /* --------------------------------------------------------------------------------------------------------- */
 
 footer {
-  margin-top: 13rem;
+  margin-top: 2rem;
   padding: 4rem;
   text-align: center;
   /* background: var(--background-opacity); */
@@ -571,7 +650,9 @@ footer {
   }
 }
 
-
+#responsive-boton {
+  padding: 1rem;
+}
 
 /* --------------------------------------------------------------------------------------------------------- */
 /* RESPONSIVE DESIGN */
@@ -579,31 +660,128 @@ footer {
 
 @media screen and (max-width: 985px) {
   body {
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
 
   #header {
+    & .all-offcanvas {
+      background-color: var(--gray);
+      width: 40%;
+      border: none;
+      padding: 2rem 1rem;
+
+      & .my-offcanvas-header {
+        background-color: var(--gray);
+        color: var(--text-color);
+        padding-left: 1rem;
+        margin-bottom: 2rem;
+
+        & h3 {
+          font-style: oblique;
+          font-weight: bolder;
+
+          font-size: 2rem;
+          margin-left: 0.5rem;
+          padding-left: 1rem;
+          border-left: 2px solid var(--pink);
+        }
+
+        & button.btn-close {
+          background-color: var(--orange);
+          opacity: 1;
+        }
+      }
+
+      & .my-offcanvas {
+        background-color: var(--gray);
+
+        color: var(--text-color);
+        padding-left: 1rem;
+
+        & li > a {
+          font-size: 2rem;
+          padding: 1rem;
+          margin-bottom: 2rem;
+          border-left: 2px solid var(--orange);
+        }
+      }
+    }
+
     & .my-hero {
+      padding-top: 20%;
       #name {
         font-size: 5rem;
       }
     }
   }
 
+  #header::before {
+    height: 400px;
+    width: 400px;
+    background-size: contain;
+    left: 2rem;
+    top: 10rem;
+  }
+
+  #know-me::before {
+    height: 500px;
+    width: 500px;
+    background-size: contain;
+    transform: rotate(50deg);
+    position: absolute;
+    z-index: -10;
+    right: -15px;
+    top: 25rem;
+  }
+
   #technologies {
     /* nesting */
 
+    & h2 {
+      padding-bottom: 3rem;
+    }
+
     & .my-row {
-      grid-template-columns: repeat(4, minmax(100px, 1fr));
+      grid-template-columns: repeat(3, minmax(100px, 1fr));
       gap: 2vw 4vw;
-      place-items: center;
+      justify-items: center;
     }
   }
 
+  #contact::before {
+    height: 500px;
+    width: 500px;
+    background-size: contain;
+    left: 0.6rem;
+    top: 1;
+  }
+
+  #know-me {
+    & h2,
+    p {
+      text-align: center;
+    }
+
+    & p {
+      width: auto;
+      word-wrap: normal;
+    }
+
+    & img {
+      display: block;
+      margin: 0 auto;
+      width: 70%;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
+  html {
+    font-size: 13px;
+  }
+
   body {
+    position: relative;
     overflow-x: hidden;
   }
 
@@ -614,7 +792,6 @@ footer {
       }
     }
   }
-
 
   #technologies {
     /* nesting */
@@ -626,28 +803,98 @@ footer {
     }
   }
 
+  #know-me::before {
+    content: "";
+    height: 400px;
+    width: 400px;
+    transform: rotate(50deg);
+    top: 20px;
+    right: 10px;
+  }
+
+  #contact::before {
+    height: 400px;
+    width: 400px;
+    top: 0;
+    left: 0;
+  }
+
+  #contact::before {
+    height: 400px;
+    width: 400px;
+    background-size: contain;
+    left: 0.6rem;
+    top: 1;
+  }
+
+  @keyframes rotate {
+    0% {
+      transform: scale(1.3) translate(0) rotate(0deg) perspective(10px);
+      border-radius: 150% 60% 80% 100%;
+    }
+
+    20% {
+      transform: scale(1.15) translate(20%, 50px) rotate(60deg)
+        perspective(1000px);
+      border-radius: 73% 100% 82% 51%;
+    }
+
+    40% {
+      transform: scale(1) translate(40%, -300px) rotate(90deg);
+      border-radius: 50% 60% 80% 51%;
+    }
+
+    60% {
+      transform: scale(0.8) translate(70%, -200px) rotate(150deg);
+      border-radius: 100% 55% 90% 61%;
+    }
+
+    80% {
+      transform: scale(1) translate(50%, -100px) rotate(200deg);
+      border-radius: 50% 60% 80% 51%;
+    }
+
+    100% {
+      transform: scale(1.5) translate(0) rotate(0deg);
+      border-radius: 50% 60% 80% 51%;
+    }
+  }
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 620px) {
+  html {
+    font-size: 12px;
+  }
 
   body {
     overflow-x: hidden;
+    box-sizing: border-box;
   }
 
   #header {
+    & .all-offcanvas {
+      width: 80%;
+      right: 0;
+      top: 0;
+
+      & .my-offcanvas-header {
+        background-color: transparent;
+      }
+    }
+
     & .my-hero {
-      #name {
+      & #name {
         font-size: 3rem;
       }
     }
   }
 
   #header::before {
-    height: 400px;
-    width: 400px;
-
+    height: 200px;
+    width: 200px;
+    top: 30%;
+    left: 0;
   }
-
 
   #technologies {
     /* nesting */
@@ -664,21 +911,26 @@ footer {
   }
 
   #know-me::before {
-    content: "";
-    height: 400px;
-    width: 400px;
-    transform: rotate(50deg);
+    background-size: contain;
+    height: 200px;
+    width: 200px;
     top: 20px;
     right: 10px;
   }
 
-
   #contact::before {
-    height: 400px;
-    width: 400px;
-    top: 0;
-    left: 0
+    background-size: contain;
+    height: 200px;
+    width: 200px;
+    top: 10%;
+    left: 0;
   }
 
-
+  #contact::before {
+    height: 200px;
+    width: 200px;
+    background-size: contain;
+    left: 0.6rem;
+    top: 1;
+  }
 }
